# backend-dream

./: .gitignore  AuthKey_2XSGAQF3N5.p8  Dockerfile  IMAGE_GENERATION_STATUS.md  README.md  RECOVERY_TEST_INSTRUCTIONS.md  RUN_WITH_VIDEO_WORKER.md  TRANSCRIPTION_FIX_SUMMARY.md  check_test_user.py  create_test_data.py  create_test_jwt.py  docker-compose.yml  fix_incomplete_dreams.py  fly.toml  get_test_token.py  key.b64  pyproject.toml  requirements.txt  run_server.sh  test_dalle.py  test_dream_flow.py  test_force_recovery.py  test_interpretation.py  test_jsv428_validation.py  test_preferences_api.py  test_recovery_fix.py  test_s3_upload.py  test_simple_finish.py
new_backend_ruminate/: config.py  dependencies.py  main.py  worker.py
new_backend_ruminate/context/: __init__.py
new_backend_ruminate/services/: video.py
new_backend_ruminate/tests/: README.md  conftest.py  llm_test_utils.py  test_astrology_services.py  test_dream_analysis.py  (+10 more)
old_tests/: create_test_user.py  create_user_profile.py  generate_test_token.py  profile_dreams_api.py  quick_test_image_gen.py  test_api_endpoint.py  test_archetype_confidence.py  test_archetype_confidence_simple.py  test_image_generation_complete.py  test_production_api.py  test_profile_integration_real.py  test_summary_before_finish.py  test_token.txt  test_west_db.py
tests/: check_user_names.py  create_test_user_simple.py  final_quick_test.py  fix_incomplete_dreams.py  test_db_schema.py  test_image_api_simple.py  test_jsv428_proof.py  test_profile_integration.py  test_recovery_simple.sh  test_recovery_system.py
(+96 files in other folders)
